# ai-cover-letter

./: .gitignore  API_KEY_MIGRATION_GUIDE.md  COUNTRY_SPECIFIC_SEARCH.md  CURRENT_STATUS.md  DOCUMENT_WEIGHTING.md  ENHANCED_LLM_SELECTION_SUMMARY.md  ENHANCED_WRITING_STYLE_SUMMARY.md  FILENAME_DATE_EXTRACTION_SUMMARY.md  IMAGE_EXTRACTION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LLM_PROVIDER_SELECTION.md  LLM_UPLOAD_IMPLEMENTATION.md  MANUAL_WEIGHT_FEATURE.md  MIGRATION_INSTRUCTIONS.md  RAG_COVER_LETTER_WEIGHTING.md  README.md  RESEARCH_PROVIDER_SELECTION.md  add_manual_weight_column.sql  add_weight_column.sql  alembic.ini  check_company_research.py  debug_brave_search.py  docker-compose.yml  env.template  fix_database.py  image_extraction_requirements.txt  inspect_database.py  install_image_extraction.py  migrate_add_weight_column.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_complete_functionality.py  test_country_search.py  test_cover_letter_with_style.py  test_document_weighting.py  test_enhanced_llm_selection.py  (+12 more)
.claude/: settings.local.json
alembic/: env.py
app/: __init__.py  database.py  exceptions.py  main.py  models.py  schemas.py  validators.py
searxng/: settings.yml
tests/: README.md  conftest.py
uploads/: 20250705_060656_175200_4_Sung_CV_2019_Academia.docx  20250705_060656_435237_5_Sung_CV_2019_Jan.docx  20250705_060715_106839_10_Sung_CV_May_2019.docx  20250705_084917_800612_0_Cover_Letter.doc  20250705_084949_765960_5_Sung_CV_2019_new.docx  20250705_084949_777958_6_Sung_CV_2020.docx  20250705_084950_061545_7_Sung_CV_Dec_2018.doc.docx
(+34 files in other folders)
